@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2021 Ritense BV, the Netherlands.
+ * Copyright 2015-2023 Ritense BV, the Netherlands.
  *
  * Licensed under EUPL, Version 1.2 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,21 +16,37 @@
 
 package com.ritense.valtimo.contract.database;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.Expression;
 import javax.persistence.criteria.Path;
 import javax.persistence.criteria.Predicate;
+import java.time.temporal.TemporalAccessor;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class PostgresQueryDialectHelper implements QueryDialectHelper {
 
-    private static final String LOWER_CASE_FUNTION = "lower";
+    private static final String LOWER_CASE_FUNCTION = "lower";
 
     @Override
-    public Expression<?> getJsonValueExpression(CriteriaBuilder cb, Path column, String path) {
-        return getValueForPath(cb, column, path);
+    public <T> Expression<T> getJsonValueExpression(CriteriaBuilder cb, Path column, String jsonPath, Class<T> type) {
+        var jsonValue = cb.function(
+            "jsonb_path_query_first",
+            Object.class,
+            column,
+            cb.function("jsonpath", String.class, cb.literal(jsonPath))
+        );
+        if (String.class.isAssignableFrom(type)) {
+            return cb.trim('"', jsonValue.as(String.class)).as(type);
+        } else if (TemporalAccessor.class.isAssignableFrom(type)) {
+            return cb.selectCase()
+                .when(jsonValue.as(String.class).in("\"\""), cb.nullLiteral(type))
+                .otherwise(cb.trim('"', jsonValue.as(String.class)))
+                .as(type);
+        } else {
+            return jsonValue.as(type);
+        }
     }
 
     @Override
@@ -43,7 +59,7 @@ public class PostgresQueryDialectHelper implements QueryDialectHelper {
                 cb.function(
                     "jsonpath",
                     String.class,
-                    cb.literal("$.** ? (@ like_regex \""+ value +"\")")
+                    cb.literal("$.** ? (@ like_regex \"" + value + "\")")
                 )
             )
         );
@@ -53,23 +69,23 @@ public class PostgresQueryDialectHelper implements QueryDialectHelper {
     public Predicate getJsonValueExistsInPathExpression(CriteriaBuilder cb, Path column, String path, String value) {
         return cb.like(
             cb.function(
-                LOWER_CASE_FUNTION,
+                LOWER_CASE_FUNCTION,
                 String.class,
-                getValueForPath(cb, column, path)
+                getValueForPath(cb, column, path, String.class)
             )
             , "%" + value.toLowerCase() + "%"
         );
     }
 
-    private Expression<String> getValueForPath(CriteriaBuilder cb, Path column, String path) {
-        List<Expression<String>> pathParts = splitPath(path).stream().map(cb::literal).collect(Collectors.toList());
-        Expression[] expressions = new Expression[pathParts.size()+1];
+    private <T> Expression<T> getValueForPath(CriteriaBuilder cb, Path column, String path, Class<T> type) {
+        List<Expression<String>> pathParts = splitPath(path).stream().map(cb::literal).toList();
+        Expression[] expressions = new Expression[pathParts.size() + 1];
         expressions[0] = column;
         System.arraycopy(pathParts.toArray(), 0, expressions, 1, pathParts.size());
 
         return cb.function(
             "jsonb_extract_path_text",
-            String.class,
+            type,
             expressions
         );
     }
